--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		        <div id="navbar" class="navbar-collapse collapse">
 		          <ul class="nav navbar-nav navbar-right">
 		            <li class="active"><a href="#" data-nav-section="home"><span>首页</span></a></li>
-		            <li><a href="#" data-nav-section="work"><span>工资</span></a></li>
+		            <li><a href="#" data-nav-section="work"><span>工作</span></a></li>
 		            <li><a href="#" data-nav-section="testimonials"><span>推荐</span></a></li>
 		            <li><a href="#" data-nav-section="services"><span>服务</span></a></li>
 		            <li><a href="#" data-nav-section="about"><span>关于</span></a></li>
