--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" style=""><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Elate — 100% Free Fully Responsive HTML5 Template by jq22.com</title>
+	<title>丛林学院</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by jq22.com">
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive">
@@ -118,7 +118,7 @@
 		          </ul>
 		        </div>
 			    </nav>
-			    
+
 			  <!-- </div> -->
 		  </div>
 	</header>
@@ -556,7 +556,7 @@
 		<div class="container">
 			<div class="">
 				<div class="col-md-12 text-center">
-					<p>© Elate Free HTML5. All Rights Reserved. <br>Created by </p>
+					<p>© 丛林学院 <br>Created by </p>
 					
 				</div>
 			</div>
